--- a/frontend/src/blocks/profile/__avatar/profile__avatar.css
+++ b/frontend/src/blocks/profile/__avatar/profile__avatar.css
@@ -9,6 +9,9 @@
     background-size: 100%, 100%;
     position: relative;
     z-index: 1;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 @media screen and (max-width: 767px) {
